src/main/gen/com/justint/usdidea/USDParser.java
// This is a generated file. Not intended for manual editing.
package com.justint.usdidea;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.justint.usdidea.lang.psi.USDTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.psi.tree.IFileElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class USDParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t instanceof IFileElementType) {
      r = parse_root_(t, b, 0);
    }
    else {
      r = false;
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return usdFile(b, l + 1);
  }

  /* ********************************************************** */
  // leftbracket [!rightbracket Item (comma Item)*] rightbracket | leftbracket rightbracket
  public static boolean Array(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array")) return false;
    if (!nextTokenIs(b, LEFTBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Array_0(b, l + 1);
    if (!r) r = parseTokens(b, 0, LEFTBRACKET, RIGHTBRACKET);
    exit_section_(b, m, ARRAY, r);
    return r;
  }

  // leftbracket [!rightbracket Item (comma Item)*] rightbracket
  private static boolean Array_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTBRACKET);
    r = r && Array_0_1(b, l + 1);
    r = r && consumeToken(b, RIGHTBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // [!rightbracket Item (comma Item)*]
  private static boolean Array_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_0_1")) return false;
    Array_0_1_0(b, l + 1);
    return true;
  }

  // !rightbracket Item (comma Item)*
  private static boolean Array_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Array_0_1_0_0(b, l + 1);
    r = r && Item(b, l + 1);
    r = r && Array_0_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !rightbracket
  private static boolean Array_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_0_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RIGHTBRACKET);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (comma Item)*
  private static boolean Array_0_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_0_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Array_0_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Array_0_1_0_2", c)) break;
    }
    return true;
  }

  // comma Item
  private static boolean Array_0_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Array_0_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && Item(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // SingleAttributeType [leftbracket rightbracket]
  public static boolean ArrayAttributeType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayAttributeType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_ATTRIBUTE_TYPE, "<array attribute type>");
    r = SingleAttributeType(b, l + 1);
    r = r && ArrayAttributeType_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [leftbracket rightbracket]
  private static boolean ArrayAttributeType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayAttributeType_1")) return false;
    parseTokens(b, 0, LEFTBRACKET, RIGHTBRACKET);
    return true;
  }

  /* ********************************************************** */
  // (NamespacedIdentifier | Identifier) (period Identifier)*
  public static boolean AttributeName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeName")) return false;
    if (!nextTokenIs(b, ALPHA)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AttributeName_0(b, l + 1);
    r = r && AttributeName_1(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_NAME, r);
    return r;
  }

  // NamespacedIdentifier | Identifier
  private static boolean AttributeName_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeName_0")) return false;
    boolean r;
    r = NamespacedIdentifier(b, l + 1);
    if (!r) r = Identifier(b, l + 1);
    return r;
  }

  // (period Identifier)*
  private static boolean AttributeName_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeName_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AttributeName_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AttributeName_1", c)) break;
    }
    return true;
  }

  // period Identifier
  private static boolean AttributeName_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeName_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PERIOD);
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (uniform | custom)? (AttributeType AttributeName | CompositionArc) equals AttributeValue
  public static boolean AttributeProperty(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeProperty")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_PROPERTY, "<attribute property>");
    r = AttributeProperty_0(b, l + 1);
    r = r && AttributeProperty_1(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    r = r && AttributeValue(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (uniform | custom)?
  private static boolean AttributeProperty_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeProperty_0")) return false;
    AttributeProperty_0_0(b, l + 1);
    return true;
  }

  // uniform | custom
  private static boolean AttributeProperty_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeProperty_0_0")) return false;
    boolean r;
    r = consumeToken(b, UNIFORM);
    if (!r) r = consumeToken(b, CUSTOM);
    return r;
  }

  // AttributeType AttributeName | CompositionArc
  private static boolean AttributeProperty_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeProperty_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AttributeProperty_1_0(b, l + 1);
    if (!r) r = CompositionArc(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // AttributeType AttributeName
  private static boolean AttributeProperty_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeProperty_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AttributeType(b, l + 1);
    r = r && AttributeName(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ArrayAttributeType | SingleAttributeType | rel
  public static boolean AttributeType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_TYPE, "<attribute type>");
    r = ArrayAttributeType(b, l + 1);
    if (!r) r = SingleAttributeType(b, l + 1);
    if (!r) r = consumeToken(b, REL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Item
  public static boolean AttributeValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AttributeValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_VALUE, "<attribute value>");
    r = Item(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // booltype | uchartype | inttype | uinttype | int64type | uint64type | halftype | floattype | doubletype | stringtype | tokentype | assettype | matrix2dtype | matrix3dtype | matrix4dtype | quatdtype | quatftype | quathtype | double2type | float2type | half2type | int2type | double3type | float3type | half3type | int3type | double4type | float4type | half4type | int4type
  public static boolean BasicDataType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BasicDataType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASIC_DATA_TYPE, "<basic data type>");
    r = consumeToken(b, BOOLTYPE);
    if (!r) r = consumeToken(b, UCHARTYPE);
    if (!r) r = consumeToken(b, INTTYPE);
    if (!r) r = consumeToken(b, UINTTYPE);
    if (!r) r = consumeToken(b, INT64TYPE);
    if (!r) r = consumeToken(b, UINT64TYPE);
    if (!r) r = consumeToken(b, HALFTYPE);
    if (!r) r = consumeToken(b, FLOATTYPE);
    if (!r) r = consumeToken(b, DOUBLETYPE);
    if (!r) r = consumeToken(b, STRINGTYPE);
    if (!r) r = consumeToken(b, TOKENTYPE);
    if (!r) r = consumeToken(b, ASSETTYPE);
    if (!r) r = consumeToken(b, MATRIX2DTYPE);
    if (!r) r = consumeToken(b, MATRIX3DTYPE);
    if (!r) r = consumeToken(b, MATRIX4DTYPE);
    if (!r) r = consumeToken(b, QUATDTYPE);
    if (!r) r = consumeToken(b, QUATFTYPE);
    if (!r) r = consumeToken(b, QUATHTYPE);
    if (!r) r = consumeToken(b, DOUBLE2TYPE);
    if (!r) r = consumeToken(b, FLOAT2TYPE);
    if (!r) r = consumeToken(b, HALF2TYPE);
    if (!r) r = consumeToken(b, INT2TYPE);
    if (!r) r = consumeToken(b, DOUBLE3TYPE);
    if (!r) r = consumeToken(b, FLOAT3TYPE);
    if (!r) r = consumeToken(b, HALF3TYPE);
    if (!r) r = consumeToken(b, INT3TYPE);
    if (!r) r = consumeToken(b, DOUBLE4TYPE);
    if (!r) r = consumeToken(b, FLOAT4TYPE);
    if (!r) r = consumeToken(b, HALF4TYPE);
    if (!r) r = consumeToken(b, INT4TYPE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // leftbrace [!rightbrace (Property | PrimSpec)* ] rightbrace
  public static boolean Body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body")) return false;
    if (!nextTokenIs(b, LEFTBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTBRACE);
    r = r && Body_1(b, l + 1);
    r = r && consumeToken(b, RIGHTBRACE);
    exit_section_(b, m, BODY, r);
    return r;
  }

  // [!rightbrace (Property | PrimSpec)* ]
  private static boolean Body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_1")) return false;
    Body_1_0(b, l + 1);
    return true;
  }

  // !rightbrace (Property | PrimSpec)*
  private static boolean Body_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Body_1_0_0(b, l + 1);
    r = r && Body_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !rightbrace
  private static boolean Body_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RIGHTBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (Property | PrimSpec)*
  private static boolean Body_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Body_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Body_1_0_1", c)) break;
    }
    return true;
  }

  // Property | PrimSpec
  private static boolean Body_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Body_1_0_1_0")) return false;
    boolean r;
    r = Property(b, l + 1);
    if (!r) r = PrimSpec(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // subLayers | inherits | variantSets | references | payload | specializes
  public static boolean CompositionArc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "CompositionArc")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPOSITION_ARC, "<composition arc>");
    r = consumeToken(b, SUBLAYERS);
    if (!r) r = consumeToken(b, INHERITS);
    if (!r) r = consumeToken(b, VARIANTSETS);
    if (!r) r = consumeToken(b, REFERENCES);
    if (!r) r = consumeToken(b, PAYLOAD);
    if (!r) r = consumeToken(b, SPECIALIZES);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // leftbrace [!rightbrace DictKey equals DictValue (DictKey equals DictValue)*] rightbrace | leftbrace rightbrace
  public static boolean Dict(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dict")) return false;
    if (!nextTokenIs(b, LEFTBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Dict_0(b, l + 1);
    if (!r) r = parseTokens(b, 0, LEFTBRACE, RIGHTBRACE);
    exit_section_(b, m, DICT, r);
    return r;
  }

  // leftbrace [!rightbrace DictKey equals DictValue (DictKey equals DictValue)*] rightbrace
  private static boolean Dict_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dict_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTBRACE);
    r = r && Dict_0_1(b, l + 1);
    r = r && consumeToken(b, RIGHTBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // [!rightbrace DictKey equals DictValue (DictKey equals DictValue)*]
  private static boolean Dict_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dict_0_1")) return false;
    Dict_0_1_0(b, l + 1);
    return true;
  }

  // !rightbrace DictKey equals DictValue (DictKey equals DictValue)*
  private static boolean Dict_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dict_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Dict_0_1_0_0(b, l + 1);
    r = r && DictKey(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    r = r && DictValue(b, l + 1);
    r = r && Dict_0_1_0_4(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !rightbrace
  private static boolean Dict_0_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dict_0_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RIGHTBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (DictKey equals DictValue)*
  private static boolean Dict_0_1_0_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dict_0_1_0_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Dict_0_1_0_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Dict_0_1_0_4", c)) break;
    }
    return true;
  }

  // DictKey equals DictValue
  private static boolean Dict_0_1_0_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Dict_0_1_0_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DictKey(b, l + 1);
    r = r && consumeToken(b, EQUALS);
    r = r && DictValue(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // AttributeType Identifier
  public static boolean DictKey(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictKey")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DICT_KEY, "<dict key>");
    r = AttributeType(b, l + 1);
    r = r && Identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Item
  public static boolean DictValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DictValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DICT_VALUE, "<dict value>");
    r = Item(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // number
  public static boolean FrameNumber(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FrameNumber")) return false;
    if (!nextTokenIs(b, NUMBER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, NUMBER);
    exit_section_(b, m, FRAME_NUMBER, r);
    return r;
  }

  /* ********************************************************** */
  // alpha (alpha | number)*
  public static boolean Identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier")) return false;
    if (!nextTokenIs(b, ALPHA)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ALPHA);
    r = r && Identifier_1(b, l + 1);
    exit_section_(b, m, IDENTIFIER, r);
    return r;
  }

  // (alpha | number)*
  private static boolean Identifier_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Identifier_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Identifier_1", c)) break;
    }
    return true;
  }

  // alpha | number
  private static boolean Identifier_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier_1_0")) return false;
    boolean r;
    r = consumeToken(b, ALPHA);
    if (!r) r = consumeToken(b, NUMBER);
    return r;
  }

  /* ********************************************************** */
  // Array (leftparens interpolation equals string rightparens)?
  public static boolean InterpolatedArray(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "InterpolatedArray")) return false;
    if (!nextTokenIs(b, LEFTBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Array(b, l + 1);
    r = r && InterpolatedArray_1(b, l + 1);
    exit_section_(b, m, INTERPOLATED_ARRAY, r);
    return r;
  }

  // (leftparens interpolation equals string rightparens)?
  private static boolean InterpolatedArray_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "InterpolatedArray_1")) return false;
    InterpolatedArray_1_0(b, l + 1);
    return true;
  }

  // leftparens interpolation equals string rightparens
  private static boolean InterpolatedArray_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "InterpolatedArray_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LEFTPARENS, INTERPOLATION, EQUALS, STRING, RIGHTPARENS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // InterpolatedArray | Array | Vector | string | number | floatnumber | assetReference pathReference | assetReference | pathReference | Dict | TimeSample
  public static boolean Item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Item")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ITEM, "<item>");
    r = InterpolatedArray(b, l + 1);
    if (!r) r = Array(b, l + 1);
    if (!r) r = Vector(b, l + 1);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, FLOATNUMBER);
    if (!r) r = parseTokens(b, 0, ASSETREFERENCE, PATHREFERENCE);
    if (!r) r = consumeToken(b, ASSETREFERENCE);
    if (!r) r = consumeToken(b, PATHREFERENCE);
    if (!r) r = Dict(b, l + 1);
    if (!r) r = TimeSample(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // add | append | prepend | delete
  public static boolean ListEditAction(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListEditAction")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LIST_EDIT_ACTION, "<list edit action>");
    r = consumeToken(b, ADD);
    if (!r) r = consumeToken(b, APPEND);
    if (!r) r = consumeToken(b, PREPEND);
    if (!r) r = consumeToken(b, DELETE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // leftparens (!rightparens ( MetadataComment | [ListEditAction? MetadataKey equals MetadataValue]) )* rightparens
  public static boolean Metadata(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Metadata")) return false;
    if (!nextTokenIs(b, LEFTPARENS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFTPARENS);
    r = r && Metadata_1(b, l + 1);
    r = r && consumeToken(b, RIGHTPARENS);
    exit_section_(b, m, METADATA, r);
    return r;
  }

  // (!rightparens ( MetadataComment | [ListEditAction? MetadataKey equals MetadataValue]) )*
  private static boolean Metadata_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Metadata_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Metadata_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Metadata_1", c)) break;
    }
    return true;
  }

  // !rightparens ( MetadataComment | [ListEditAction? MetadataKey equals MetadataValue])
  private static boolean Metadata_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Metadata_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Metadata_1_0_0(b, l + 1);
    r = r && Metadata_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // !rightparens
  private static boolean Metadata_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Metadata_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RIGHTPARENS);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // MetadataComment | [ListEditAction? MetadataKey equals MetadataValue]
  private static boolean Metadata_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Metadata_1_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = MetadataComment(b, l + 1);
    if (!r) r = Metadata_1_0_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ListEditAction? MetadataKey equals MetadataValue]
  private static boolean Metadata_1_0_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Metadata_1_0_1_1")) return false;
    Metadata_1_0_1_1_0(b, l + 1);
    return true;
  }
